# FreeCAD

./: CMakeLists.txt
cMake/: UseLibPack12x.cmake
src/Mod/Cloud/: CMakeLists.txt
src/Mod/Cloud/App/: AppCloud.cpp
